--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -180,7 +180,7 @@ body.feed{
     padding: 0.7rem 0;
     position: fixed;
     top: 0;
-    z-index: 10;
+    z-index: 1;
   }
   
   nav .logo {
@@ -402,6 +402,7 @@ body.feed{
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--color-dark);
+    padding: 1rem 4rem;
   }
   
   
@@ -725,7 +726,498 @@ body.feed{
     box-shadow: 1px 4px 19px 0px #696969;
   }
   
+  /* MODAL DO POST */
+
+.modal {
+  padding: 0 0 !important;
+  border-radius: 20px !important;
+
+  width: 790px !important;
+  height: 800px;
+
+  max-width: 800px !important;
+  max-height: 810px !important;
+
+  overflow: hidden;
+  box-shadow: 1px 1px 40px 1px black !important;
+}
+
+.cr-boundary{
+  width: 800px !important;
+}
+
+.croppie-container .cr-image, .croppie-container .cr-overlay, .croppie-container .cr-viewport{
+  border: none !important;
+}
+
+.croppie-container .cr-viewport, .croppie-container .cr-resizer{
+  margin: 0 !important;
+}
+
+.modal a.close-modal {
+  display: none !important;
+}
+
+.modal-foto-post {
+  display: flex;
+  flex-direction: column;
+
+  width: 800px !important;
+  height: 810px !important;
+
+  border-radius: 20px;
+  box-shadow: 1px 1px 40px 1px black;
+  background-color: var(--color-white) !important;
+}
+
+.modal-foto-post .inputArea span{
+  font-family: "Raleway Bold", sans-serif;
+  font-size: 1.5rem;
+
+}
+.tituloModalPost {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 70px;
+
+  align-self: flex-start;
+
+  border-bottom: 1px solid gray;
+
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+}
+
+.inputArea {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 90%;
+
+  gap: 30px;
+}
+
+.inputButtonEstilo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 486px;
+  height: 58px;
+
+  background: #9998d3;
+  border-radius: 25px;
+
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: black;
+  cursor: pointer;
+}
+
+.inputButtonEstilo:hover {
+  background: rgba(153, 152, 211, 0.9);
+}
+
+.inputForm {
+  display: none;
+}
+
+.blocker:before{
+  display: none !important;
+}
+
+/* MODAL RECORTAR IMAGEM POST */
+
+.cr-slider {
+  display: none;
+}
+
+.croppie-container {
+  height: 710px !important;
+  width: 800px !important;
+}
+
+.tituloModalPost a {
+  color: #3837a1;
+}
+
+.tituloModalPost a:hover {
+  color: rgba(56, 55, 161, 0.9);
+}
+
+
+
+/* MODAL detalhes Post */
+
+#criar-post label.tituloModalPost {
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+
+  color: #3837A1;
+}
+
+
+#criar-post{
+  width: 1210px !important;
+  max-width: 1210px !important;
+}
+
+.submitCriarPost {
+
+  background: none;
+  border: none;
+
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: black;
+
+  color: #3837A1;
+
+  cursor: pointer;
+
+}
+
+.submitCriarPost:hover {
+  color: rgba(56, 55, 161, 0.9);
+
+}
+
+.criarPostElements{
+  display: grid;
+  grid-template-rows: repeat(15, 1fr);
+  width: 410px;
+}
+
+
+.parte1CriarPost{
+  grid-row: 6 span ;
+  width: 100%;
+  height: 100%;
+}
+
+.parte1CriarPost .userElementos{
+  width: 100%;
+  gap: 15px;
+  padding: 20px 0 0 20px !important;
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.parte1CriarPost .userElementos .fotoDePerfil{
+
+}
+
+.parte1CriarPost .userElementos:hover{
+background: none;
+cursor: default;
+}
+
+.parte1CriarPost .imagemUser{
+    border:none !important;
+    background-color: none !important;
+    box-shadow: 0px 0px 7px 0px black !important;
+}
+
+.parte1CriarPost .textNomeUsuario{
+  font-family: "Raleway Bold", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+#form-aid textarea{
+  resize: none;
+  width: 410px;
+  height: 155px;
+  border: none;
+  padding: 0 20px 0 20px;
+
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+#form-aid textarea:focus{
+  outline: none;
+}
+
+#form-aid textarea::placeholder{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.letraCont{
+ display: flex; 
+ width: 95%; 
+ justify-content: end; 
+ padding: 0px 20px 0 0; 
+ font-family: "Raleway Medium";
+ color: #777777;
+}
+
+
+
+
+.parte2CriarPost{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+ justify-content: space-between;
   
+  grid-row: 1 span / 1 span;
+  width: 100%;
+  height: 100%;
+
+  border-top: 1px solid gray;
+}
+
+.parte2CriarPost input{
+  height: 98%;
+  width: 70%;
+  border: none;
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  padding-left: 20px;
+
+}
+
+.parte2CriarPost input::placeholder{
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  
+  color: #777777;
+  
+}
+
+.parte2CriarPost input:focus{
+  outline:none;
+}
+
+.parte2CriarPost span.material-symbols-outlined{
+  font-size: 35px !important;
+  padding-right: 20px;
+}
+
+.parte2CriarPost i{
+  font-size: 2.3rem;
+}
+
+.parte3CriarPost{
+  grid-row: 7 span / 7 span;
+  width: 100%;
+  height: 100%;
+  
+}
+
+#categoriasHolder{
+  display: flex;
+  
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 23px 30px 23px;
+  gap: 20px;
+
+}
+
+#categoriasHolder span.textPlaceholder{
+line-height: 19px;
+font-size: 15px;
+}
+
+
+
+
+
+.categoriaSelectTitulo{
+  width: 100%;
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  
+  background: white;
+  border-top: 1px solid gray;
+  padding-left: 20px; 
+  
+
+}
+
+.categoriaSelectTitulo span{
+  font-family: 'Raleway Medium', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+
+
+#txtCategoria{
+  grid-column: 9 span;
+  height: 40px;
+   
+   
+  border: 1px solid #B7B7B7;
+  border-radius: 18px;
+   
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
+  border-right: none;
+   
+  padding: 0 10px 0 10px;
+
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 19px;
+
+ }
+ 
+ #txtCategoria::placeholder{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 19px;
+
+  color: #B7B7B7;
+ }
+
+
+ #txtCategoria:focus{
+ outline: none;
+ }
+
+ #categoriasHolder i{
+  font-size: 1.5rem;
+  color: white;
+}
+
+ 
+#submitCategoria{
+  grid-column: 1 span;
+  display: flex;
+  align-items: center;
+
+  border: 1px solid gray;
+  border-radius: 18px;
+  
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  
+  background: rgba(56, 55, 161, 1);
+
+  cursor: pointer;
+ }
+
+ #submitCategoria:hover{
+  background: rgba(56, 55, 161, 0.90);
+ }
+
+
+ .categoriaSelector{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: fit-content;
+  border: 1px solid rgba(56, 55, 161, 1);
+  border-radius: 18px;
+  
+  font-family: 'Raleway Medium';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+
+  text-align: center;
+
+  color: #000000;
+  
+  position: relative;
+
+  padding: 1px 25px 1px 15px;
+
+  overflow: hidden;
+}
+
+.categoriasChecksHolder{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 40px;
+}
+
+
+
+.checkbox{
+  appearance: none;
+  position: absolute;
+  top: 40%;
+  right: -2px;
+  transform: translateY(-50%);
+
+
+  height: 35px;
+  width: 20px;  
+  
+  border: 1px solid gray;
+  
+  border-bottom: none;
+  border-top: none;
+  border-right: none;
+  
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
+
+  margin: 2px 0 0 0;
+  
+  transition: 50ms;
+
+  cursor: pointer;
+}
+
+.checkbox:checked{
+  background-color: #3837a1;
+
+}
+
+
   
   /* perfil do usuario */
 
@@ -764,7 +1256,7 @@ body.feed{
     flex-direction: row;
   }
 
-  .meio .fotoDePerfil{
+  .meio .userCima .fotoDePerfil{
     width: 9rem;
   }
 
@@ -836,17 +1328,20 @@ body.feed{
     justify-content: space-evenly;
     width: 100%;
     height: 2rem;
-    font-size: 1.5rem;
-    font-weight: 700;
     margin: 0.5rem 0;
   }
 
-  .meio .userTabs span{
-    position: relative;
-    cursor: pointer;
-  }
 
-  .tabAtiva::before{
+
+.userTabOption{
+  background: none;
+  font-size: 1.5rem;
+  font-weight: 700;
+  cursor: pointer;
+  position: relative;
+}
+
+  .userTabOption--ativo::before{
     content: "";
     height: 0.5rem;
     background: var(--color-purple);
@@ -857,16 +1352,24 @@ body.feed{
     border-radius: 80px;
 }
 
+
+.tabAtiva{
+  display: grid !important;
+}
+
+
+
 .postagens{
     position: relative;
     padding: 2rem 0;
     margin-left: 1.4rem;
-    display: grid;    
+    display: none;    
     grid-template-columns: 33% 33% 33%;
     row-gap: 2rem;
+    height: 15rem;
 }
 
-.postagens .previewPostImage {
+ .previewPostImage {
     width: 14.5rem;
     border: 1px solid gray;
     aspect-ratio: 1/1;
@@ -874,10 +1377,37 @@ body.feed{
     overflow: hidden;
 }
 
-.postagens .aviso{
+ .aviso{
     display: block;
     position: absolute;
     width: 24rem;
     align-self: center;
     justify-self: center;
+
+    text-align: center;
+}
+
+.marcacoes{
+  position: relative;
+  padding: 2rem 0;
+  margin-left: 1.4rem;
+  display: none;    
+  grid-template-columns: 33% 33% 33%;
+  row-gap: 2rem;
+  height: 15rem;
+}
+
+
+.curtidas{
+  position: relative;
+  padding: 2rem 0;
+  margin-left: 1.4rem;
+  display: none;    
+  grid-template-columns: 33% 33% 33%;
+  row-gap: 2rem;
+  height: 15rem;
+}
+
+.curtidas .aviso a{
+  color: var(--color-purple);
 }
