--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -580,8 +580,10 @@ body.feed{
     margin: 0.6rem;
   }
   
-  .meio .feed .botoes .botoesDeInteracao span{
+  .meio .feed .botoes .botoesDeInteracao button{
     cursor: pointer;
+    font-size: 1.5rem;
+    background: none;
   }
   
   .meio .curtidoPor{
@@ -1553,13 +1555,14 @@ font-size: 15px;
     display: none;    
     grid-template-columns: 33% 33% 33%;
     row-gap: 2rem;
-    height: 15rem;
+    height: fit-content;
+    min-height: 15rem;
 }
 
  .previewPostImage {
     width: 14.5rem;
     border: 1px solid gray;
-    aspect-ratio: 1/1;
+
     border-radius: var(--card-border-radius);
     overflow: hidden;
 }
@@ -1581,7 +1584,8 @@ font-size: 15px;
   display: none;    
   grid-template-columns: 33% 33% 33%;
   row-gap: 2rem;
-  height: 15rem;
+  height: fit-content;
+  min-height: 15rem;
 }
 
 
@@ -1592,7 +1596,8 @@ font-size: 15px;
   display: none;    
   grid-template-columns: 33% 33% 33%;
   row-gap: 2rem;
-  height: 15rem;
+  height: fit-content;
+  min-height: 15rem;
 }
 
 .curtidas .aviso a{
