--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -572,44 +572,102 @@ body.feed{
     overflow: hidden;
     margin: 0.7rem 0;
   }
+
   .meio .feed .botoes{
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 1.4rem;
-    margin: 0.6rem;
+    margin: 0.6rem 0.6rem 0 0.6rem;
   }
+
+
   
   .meio .feed .botoes .botoesDeInteracao button{
     cursor: pointer;
     font-size: 1.5rem;
     background: none;
   }
+
+  .meio .feed .botoes .botoesDeInteracao button.comentar{
+
+    background-image: url("../images/botaoComentar.svg");
+
+    width: 2rem;
+    height: 2rem;
+
+    cursor: pointer;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 1rem;
+  }
+
+  .meio .feed .botoes .botoesDeInteracao button.mensagem{
+    background-image: url("../images/botaoMensagem.svg");
+
+ 
+    width: 2.2rem;
+    height: 2rem;
+
+    cursor: pointer;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 1rem;
+  }
+  
+  .meio .feed .botoes .botoesDeInteracao input[type="checkbox"]{
+    appearance: none;
+
+    background-image: url("../images/pataCurtida.svg");
+
+    width: 2.1rem;
+    height: 2rem;
+
+    padding-bottom: 2.1rem;
+
+    cursor: pointer;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+  }
+  .meio .feed .botoes .botoesDeInteracao input[type="checkbox"]:checked{
+    background-image: url("../images/pataCurtidaPreenchida.svg");
+  }
+
   
   .meio .curtidoPor{
     display: flex;
+    width: 10rem;
+    margin: 0 0.6rem;
   }
   
   .meio .curtidoPor span{
-    width: 1.4rem;
-    height: 1.4rem;
-    display: block;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 1px solid var(--color-white);
-    margin-left: -0.6rem;
+    font-family: "Public Sans Bold";
+    font-size: 1.2rem;
+   
   }
-  
-  .meio .feed .curtidoPor span:first-child{
-    margin: 0;
-  }
+
   
   .meio .curtidoPor p{
     margin-left: 0.5rem;
   }
   
-  
-  
+  .meio .caption{
+    margin: 0 0.6rem;
+  }
+
+  .meio .caption :nth-child(1){
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+
+  .meio .caption :nth-child(2){
+    font-size: 1.1rem;
+    font-weight: 400;
+  }
   /* lado direito */
   .ladoDireito .whiteBoxHolder {
     background: var(--color-white);
