--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -71,6 +71,7 @@
   :root{
     --color-white: #FFFFFF;
     --color-dark: rgba(0, 0, 0, 1);
+    --color-pastelDark: #202225;
     --color-lightGray: #f5f5f5;
     --color-extraLightGray: rgba(245, 245, 245, 1);
     --color-gray: rgba(86, 86, 86, 1);
@@ -1383,6 +1384,8 @@ font-size: 15px;
     box-shadow: 4px 1px 18px 0px #00000057;
   }
 
+  /* modal editar perfil */
+
   .perfilUsuario #modal-editar-perfil{
     width: 650px !important;
     height: fit-content !important;
@@ -1520,6 +1523,110 @@ font-size: 15px;
     height: fit-content;
     align-self: center;
     margin: 0 2rem;
+  }
+
+
+  /* modal crop imagem perfil usuario */
+
+  .perfilUsuario #modal-recortar-foto-perfil{
+    width: 31rem !important;
+    height: 39.5rem !important;
+    padding: var(--card-padding) !important;
+    border-radius: var(--card-border-radius) !important;  
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col{
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col:first-child{
+    font-size: 1.8rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    margin: 0.4rem 0;
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col #upload-demo{
+    width: 390px !important;
+
+    overflow: hidden;
+    margin: 1rem 0;
+    border-radius: var(--card-border-radius);
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container .cr-boundary{
+    height: 395px !important;
+    width: 380px !important;
+
+    border-radius: var(--card-border-radius);
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 165px !important;
+
+    border: 1px solid var(--color-gray);
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container .cr-image{
+  border-radius: var(--card-border-radius);
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container .cr-boundary .cr-viewport {
+    left: unset;
+    right: unset;
+    top: unset;
+    bottom: unset;
+
+    border: 2px solid var(--color-gray) !important;
+
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container .cr-slider{
+    display: unset !important;
+    width: 100% !important;
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container input[type=range]::-webkit-slider-runnable-track {
+    background: var(--color-pastelDark);
+
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container .cr-slider-wrap {
+    display: flex;
+    width: 380px !important;
+    height: 40px;
+    
+    
+    border-radius: var(--card-border-radius);
+    padding-inline: 15px;
+    
+    border: rgb(146 139 139) solid 2px;
+    background: rgb(35 35 40 / 24%);
+    
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col .btn-primary{
+    color: var(--color-dark);
+    font-size: 1.2rem;
+    font-weight: 700;
+
+    box-shadow: 1px 4px 19px 0px #696969;
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col .btn{
+    width: 380px;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
   }
 
 
