--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -117,6 +117,10 @@
   margin: 0 0.7rem;
 }
 
+.borderTop{
+  border-top: 1px solid gray;
+}
+
 .boloDeAniversario{
   background-image: url("../images/boloAniversario.svg");
   background-repeat: no-repeat;
@@ -145,6 +149,8 @@ body.feed{
     color: var(--color-dark);
     background: var(--color-lightGray);
     overflow-x: hidden;
+
+    position: relative;
   }
   
   
@@ -153,6 +159,52 @@ body.feed{
     margin: 0 auto;
   }
   
+  .popupOptions{
+    width: 15rem;
+    height: fit-content;
+    min-height: 15rem;
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    box-shadow: 1px 1px 20px 0px #696969c2;
+    position: absolute;
+    z-index: 10;
+    right: 135px;
+    top: -20px;
+    display: none;
+  }
+
+  .popupOptions .fotoDePerfil{
+    width: 3rem;
+    height: 3rem;
+  }
+ 
+  .popupOptions .flex-row{
+    align-items: center;
+  }
+
+  .popupOptions .flex-row h3 {
+    margin-left: 0.5rem;
+  }
+
+
+  .popupOptions .flex-col{
+    height: fit-content;
+    padding: var(--card-padding);
+  }
+
+  .popupOptions .flex-col .petUser{
+    padding: var(--card-padding);
+    padding-left: 2.1rem;
+    
+    padding-bottom: 0.1rem;
+  }
+
+  .popupOptions .flex-col .petUser .fotoDePerfil{
+    width: 2rem;
+    height: 1.9rem;
+  }
+
+
   
   .fotoDePerfil{
     width: 3.5rem;
@@ -160,6 +212,7 @@ body.feed{
     border-radius: 50%;
     overflow: hidden;
     border: 1px solid var(--color-purple);
+    user-select: none;
   }
   
   img{
@@ -253,9 +306,32 @@ body.feed{
   
   nav .opcoes {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 1rem;
+    width: 9rem;
+    height: 4rem;
+    border-radius: var(--border-radius);
+    padding-inline: 1rem;
+    cursor: pointer;
+    transition: all 300ms ease;
+
   }
+
+  nav .opcoes  label{
+    cursor: pointer;
+  }
+
+
+  nav .opcoes .fotoDePerfil{
+    width: 2.9rem;
+    user-select: none;
+  }
+
+  nav .opcoes:hover{
+    background: rgba(4, 4, 4, 0.078);
+  }
+
   
   nav .opcoes label{
     font-size: 1.7rem;
@@ -431,7 +507,7 @@ body.feed{
     width: 100%;
     text-align: center;
     padding: 1rem 0;
-    box-shadow: 1px 4px 19px 0px #696969;
+    box-shadow: 1px 1px 20px 0px #696969c2;
   
   }
   
