--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -69,6 +69,32 @@ body {
   overflow-x: hidden;
 }
 
+:root{
+  --color-white: #FFFFFF;
+  --color-dark: rgba(0, 0, 0, 1);
+  --color-pastelDark: #202225;
+  --color-lightGray: #f5f5f5;
+  --color-extraLightGray: rgba(245, 245, 245, 1);
+  --color-gray: rgba(86, 86, 86, 1);
+  --color-light: rgba(224, 224, 224, 1);
+
+  --color-purple: rgba(56, 55, 161, 1);
+  --color-lightBlue: rgba(186, 213, 219, 1);
+  --color-pastelYellow: rgba(255, 251, 159, 1);
+  --color-pastelOrange: rgba(251, 211, 164, 1);
+ 
+  --border-radius: 2rem;
+  --card-border-radius: 1rem;
+  --btn-padding: 0.6rem 1rem;
+  --search-padding: 0.6rem 1rem;
+  --card-padding: 1rem; 
+
+  --sticky-top-left: 5.4rem;
+  --sticky-top-right: -18rem;
+}
+
+
+
 /* PAGE ESCOLHA TIPO USUARIO */
 
 .holderETU {
@@ -889,6 +915,34 @@ body {
 }
 
 
+.petsPerfilHolder{
+  width: 95%;
+  height: 25rem;
+  padding: 1rem 3rem;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  margin: 1.5rem 0;
+
+  position: relative;
+}
+
+.petsPerfilHolder::-webkit-scrollbar {
+  width: 10px;
+}
+
+.petsPerfilHolder::-webkit-scrollbar-track {
+  background-color: #14526945;
+  border-radius: 20px;
+}
+
+.petsPerfilHolder::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #4544aec8;
+}
+
+
+
 
 .botaoFinalizar {
   width: 495px;
@@ -909,6 +963,8 @@ body {
   line-height: 45px;
 }
 
+
+
 .botaoOutroCadastro {
   width: 495px;
   height: 50px;
@@ -916,6 +972,7 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 
   margin-top: 1rem;
+  margin-bottom: 2rem;
   border-radius: 20px;
   font-style: normal;
   font-weight: 700;
@@ -931,6 +988,28 @@ body {
 
 .logoPrincipalFinalizarForm {
   margin-top: 30px;
+}
+
+.petUser .fotoDePerfil{
+  width: 6rem;
+}
+
+.petUser{
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.petUser .nomeEUser{
+  margin-inline: 1rem;
+  font-family: "Raleway Bold", sans-serif;
+  font-size: 1.5rem;
+}
+
+.petUser i{
+  font-size: 3rem;
+  margin-left: 9.5rem;
+  cursor: pointer;
+  color: #831111;
 }
 
 /* PAGE FORMULARIO INFO EMPRESA */
